<resources>
    <string name="app_name">SmartTutor</string>

    <!-- Authentication Screen -->
    <string name="mobile_number">Mobile Number(10 digits)</string>
    <string name="password_login">Password</string>
    <string name="login_txt">Login</string>
    <string name="forget_password">Forgot Password</string>
    <string name="new_registration">If you do not have an account, Register</string>
    <string name="password_registration">Password</string>
    <string name="password_confirm_registration">Confirm Password</string>
    <string name="full_name_registration">Full Name</string>
    <string name="Username_registration">Username</string>
    <string name="Email_registration">Email</string>
    <string name="phone_registration">Phone Number</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="next">NEXT</string>
    <string name="login">LOGIN</string>

    <!-- Navigation View -->
    <string name="dashboard">Dashboard</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="aboutapp">About App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="nearbyme">Near By Me</string>
    <string name="app_name1">Smart Tutor Application</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="open_drawer">open</string>
    <string name="close_drawer">close</string>
</resources>